Translation Rest.js

--- a/Poker/nbproject/private/private.properties
+++ b/Poker/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/home/ferran/.netbeans/8.2/config/GlassFishEE6/Properties/gfv31244246415.properties
+deploy.ant.properties.file=/home/damura/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3-346962249.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/ferran/glassfish-4.1.1/glassfish/domains/domain1
-j2ee.server.home=/home/ferran/glassfish-4.1.1/glassfish
-j2ee.server.instance=[/home/ferran/glassfish-4.1.1/glassfish:/home/ferran/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/ferran/glassfish-4.1.1
-user.properties.file=/home/ferran/.netbeans/8.2/build.properties
+j2ee.server.domain=/home/damura/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=/home/damura/glassfish-4.1.1/glassfish
+j2ee.server.instance=[/home/damura/glassfish-4.1.1/glassfish:/home/damura/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/home/damura/glassfish-4.1.1
+user.properties.file=/home/damura/.netbeans/8.2/build.properties
